--- a/index.html
+++ b/index.html
@@ -4,20 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sadia Siddika Prova</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./tailwind.config.js"></script>
 </head>
-<body>
-    <nav>
-        <img src="./images/logo_dark.png" alt="Logo">
-        <ul>
+<body class="overflow-x-hidden">
+
+
+  <div class="fixed top-0 right-0 w-11/12 -z-10 translate-y-[-80%]">
+    <img src="./images/header-bg-color.png" alt="" class="w-full">
+  </div>
+
+
+
+
+    <nav class="w-full fixed px-5 lg:px-8 xl:px-[8%] py-4 flex items-center justify-between z-50">
+        <img src="./images/logo_dark1.png" alt="Logo" 
+        class="w-28 cursor-pointer mr-14">
+        <ul class="hidden md:flex items-center gap-6 lg:gap-8 rounded-full px-12 py-3 bg-white shadow-sm bg-opacity-50">
             <li><a href="#top">Home</a></li>
             <li><a href="#about">About Me</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">My Projects</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
-        <a href="#contact">Contact
-            <img src="./images/arrow-icon.png" alt="">
-        </a>
+
+        <div class="flex items-center gap-4">
+            <button><img src="./images/moon_icon.png" alt=""
+                class="w-6"></button>
+            <a href="#contact" 
+            class="hidden lg:flex items-center gap-3 px-10 py-2.5 border border-gray-500 rounded-full ml-4">
+            Contact
+                <img src="./images/arrow-icon.png" alt=""
+                class="w-3">
+            </a>
+
+            <button class="block md:hidden ml-3" onclick="openMenu()">
+                <img src="./images/menu-black.png" alt="" class="w-6">
+            </button>
+        </div>
+      <!-----Mobile Menu----->
+      
+      <ul id="sideMenu" class="flex md:hidden flex-col gap-4 py-20 px-10 fixed -right-64 top-0 bottom-0 w-64 z-50 h-screen bg-rose-50 transition duration-500">
+
+       <div class="absolute right-6 top-6" onclick="closeMenu()">
+        <img src="./images/close-black.png" alt="" class="w-5 cursor-pointer">
+       </div>
+
+        <li><a href="#top" onclick="closeMenu()">Home</a></li>
+        <li><a href="#about" onclick="closeMenu()">About Me</a></li>
+        <li><a href="#skills" onclick="closeMenu()">Skills</a></li>
+        <li><a href="#projects" onclick="closeMenu()">My Projects</a></li>
+        <li><a href="#contact" onclick="closeMenu()">Contact Me</a></li>
+    </ul>
+      
     </nav>
+
+
+    <script src="./script.js"></script>
 </body>
 </html>
