--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
       
     </nav>
 
+    <!-----header section----->
+
+    <div class="w-11/12 max-w-3xl text-center mx-auto h-screen flex flex-col items-center justify-center gap-4">
+        <img src="./images/profile1.png" alt="" class="rounded-full w-32">
+        <h3 class="flex items-end gap-2 text-xl md:text-2xl mb-3">Hi! I'm Sadia Siddika Prova <img src="./images/hand-icon.png" alt="" class="w-6"></h3>
+        <h1 class="text-3xl sm:text-6xl lg:text-[66px]">Full-Stack Web Developer based in Bangladesh.</h1>
+        <p class="max-w-2xl mx-auto">I am a full-stach web developer from Bangladesh with 6 month experience in multiple courses like Programmimg Hero.</p>
+
+        <div class="flex flex-col sm:flex-row items-center gap-4 mt-4">
+            <a href="#contact" class="px-10 py-3 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2">Contact Me <img src="/images/right-arrow-white.png" alt="" class="w-4"></a>
+
+            <a href="./images/sadia_siddika_prova_resume.pdf" download class="px-10 py-3 border rounded-full border-gray-500 flex items-center gap-2 bg-white">My Resume <img src="/images/download-icon.png" alt="" class="w-4"></a>
+        </div>
+    </div>
 
     <script src="./script.js"></script>
 </body>
