--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <img src="./images/profile1.png" alt="" class="rounded-full w-32">
         <h3 class="flex items-end gap-2 text-xl md:text-2xl mb-3">Hi! I'm Sadia Siddika Prova <img src="./images/hand-icon.png" alt="" class="w-6"></h3>
         <h1 class="text-3xl sm:text-6xl lg:text-[66px]">Front-End Web Developer based in Bangladesh.</h1>
-        <p class="max-w-2xl mx-auto">I am a front-end web developer from Bangladesh with 6 month experience in multiple courses like Programmimg Hero.</p>
+        <p class="max-w-2xl mx-auto">I am a front-end web developer from Bangladesh with 6 month experience in multiple courses learn to  like a Programmimg Hero.</p>
 
         <div class="flex flex-col sm:flex-row items-center gap-4 mt-4">
             <a href="#contact" class="px-10 py-3 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2">Contact Me <img src="/images/right-arrow-white.png" alt="" class="w-4"></a>
@@ -136,6 +136,43 @@
             </div>
         </div>
     </div>
+
+    <!----Skills/Sevices-->
+
+    <div id="services" class="w-full px-[12%] py-10 scroll-mt-20">
+        <h4 class="text-center mb-2 text-lg">What I Offer</h4>
+        <h2 class="text-center text-5xl">My Services</h2>
+        <p class="text-center max-w-2xl mx-auto mt-5 mb-12">I am a front-end web developer from Bangladesh with 6 month experience in multiple courses learn to  like a Programmimg Hero.</p>
+
+        <div class="grid grid-cols-4 gap-6 my-10">
+             <div class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-[#fcf4ff] hover: -translate-y-1 duration-500">
+                <img src="./images/web-icon.png" alt="" class="w-10">
+                <h3 class="text-lg my-4 teaxt-gray-700">Web Design</h3>
+                <p class="text-sm text-gray-600 leading-5">Web development is the process of building, programming...</p>
+                <a href="https://en.wikipedia.org/wiki/Web_design" class="flex items-center gap-2 text-sm mt-5">Reade more <img src="./images/right-arrow.png" alt="" class="w-4"></a>
+             </div>
+             <div class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-[#fcf4ff] hover: -translate-y-1 duration-500">
+                <img src="./images/mobile-icon.png" alt="" class="w-10">
+                <h3 class="text-lg my-4 teaxt-gray-700">Mobile App</h3>
+                <p class="text-sm text-gray-600 leading-5">Web development is the process of building, programming...</p>
+                <a href="https://en.wikipedia.org/wiki/Mobile_app" class="flex items-center gap-2 text-sm mt-5">Reade more <img src="./images/right-arrow.png" alt="" class="w-4"></a>
+             </div>
+             <div class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-[#fcf4ff] hover: -translate-y-1 duration-500">
+                <img src="./images/ui-icon.png" alt="" class="w-10">
+                <h3 class="text-lg my-4 teaxt-gray-700">UI/UX Design</h3>
+                <p class="text-sm text-gray-600 leading-5">Web development is the process of building, programming...</p>
+                <a href="https://www.behance.net/galleries/ui-ux/ui-ux" class="flex items-center gap-2 text-sm mt-5">Reade more <img src="./images/right-arrow.png" alt="" class="w-4"></a>
+             </div>
+             <div class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-[#fcf4ff] hover: -translate-y-1 duration-500">
+                <img src="./images/graphics-icon.png" alt="" class="w-10">
+                <h3 class="text-lg my-4 teaxt-gray-700">Graphics Design</h3>
+                <p class="text-sm text-gray-600 leading-5">Web development is the process of building, programming...</p>
+                <a href="" class="flex items-center gap-2 text-sm mt-5">Reade more <img src="./images/right-arrow.png" alt="https://www.behance.net/galleries/graphic-design" class="w-4"></a>
+             </div>
+        </div>
+
+    </div>
+
 
     <script src="./script.js"></script>
 </body>
