--- a/index.html
+++ b/index.html
@@ -172,7 +172,113 @@
         </div>
 
     </div>
+<!----- My Work ----->
+<div id="services" class="w-full px-[12%] py-10 scroll-mt-20">
+    <h4 class="text-center mb-2 text-lg">My portfolio</h4>
+    <h2 class="text-center text-5xl">My Latest Work</h2>
+    <p class="text-center max-w-2xl mx-auto mt-5 mb-12">Welcome to my web development portfolio! Explore a collection of projects showcasing my expertise in front-end development.</p>
 
+    <div class="grid grid-cols-4 my-10 gap-5">
+        <div class="aspect-square bg-[url('./images/work-1.png')] bg-no-repeat bg-cover bg-center rounded-lg relative cursor-pointer group">
+
+            <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
+
+                <div>
+                    <h2 class="font-semibold">Front-End Projects</h2>
+                    <p class="text-sm text-gray-700">Web Design</p>
+                </div>
+
+                <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
+                    <img src="./images/send-icon.png" alt="" class="w-5">
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- 2 -->
+        <div class="aspect-square bg-[url('./images/work-2.png')] bg-no-repeat bg-cover bg-center rounded-lg relative cursor-pointer group">
+
+            <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
+
+                <div>
+                    <h2 class="font-semibold">Geo Based App</h2>
+                    <p class="text-sm text-gray-700">Mobile App</p>
+                </div>
+
+                <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
+                    <img src="./images/send-icon.png" alt="" class="w-5">
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- 3 -->
+
+        <div class="aspect-square bg-[url('./images/work-3.png')] bg-no-repeat bg-cover bg-center rounded-lg relative cursor-pointer group">
+
+            <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
+
+                <div>
+                    <h2 class="font-semibold">Burger Site</h2>
+                    <p class="text-sm text-gray-700">Web Design</p>
+                </div>
+
+                <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
+                    <img src="./images/send-icon.png" alt="" class="w-5">
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- 4 -->
+
+        <div class="aspect-square bg-[url('./images/work-4.png')] bg-no-repeat bg-cover bg-center rounded-lg relative cursor-pointer group">
+
+            <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
+
+                <div>
+                    <h2 class="font-semibold">UI/UX Designing</h2>
+                    <p class="text-sm text-gray-700">Web Design</p>
+                </div>
+
+                <div class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
+                    <img src="./images/send-icon.png" alt="" class="w-5">
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+    <a href="#" class="w-max flex items-center justify-center gap-2 text-gray-700 border-[0.5px] border-gray-700 rounded-full py-3 px-10 mx-auto my-20 hover:bg-[#fcf4ff] duration-500">Show More
+        <img src="./images/right-arrow-bold.png" alt="" class="w-4">
+    </a>
+
+    </div>
+
+    <!--Contact-->
+
+    <div id="contact" class="w-full px-[12%] py-10 scroll-mt-20 bg-[url('./images/footer-bg-color.png')] bg-no-repeat bg-[length:90%_auto] bg-center">
+        <h4 class="text-center mb-2 text-lg">Connect With Me
+        </h4>
+    <h2 class="text-center text-5xl">Get In Touch</h2>
+    <p class="text-center max-w-2xl mx-auto mt-5 mb-12">I'd love to hear from you! If you have any questions, comments or feedback, please use the form below.</p>
+
+    <form action="" class="max-w-2xl mx-auto">
+        <div class="grid grid-cols-2 gap-6 mt-10 mb-8">
+            <input type="text" placeholder="Enter Your Name" class="flex-1 p-3 outline-none border-[0.5px] border-gray-400 rounded-md bg-white">
+
+            <input type="email" placeholder="Enter Your Email" class="flex-1 p-3 outline-none border-[0.5px] border-gray-400 rounded-md bg-white">
+        </div>
+        <textarea rows="6" placeholder="Enter Your Message" class="w-full p-4 outline-none border-[0.5px] border-gray-400 rounded-md bg-white mb-6"></textarea>
+        <button class="py-3 px-8 w-max flex items-center justify-center gap-2 bg-black/80 text-white rounded-full mx-auto hover:bg-black duration-500">Submit Now
+            <img src="./images/right-arrow-white.png" alt="" class="w-4">
+        </button>
+    </form>
+    </div>
 
     <script src="./script.js"></script>
 </body>
