--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <ul class="hidden md:flex items-center gap-6 lg:gap-8 rounded-full px-12 py-3 bg-white shadow-sm bg-opacity-50">
             <li><a href="#top">Home</a></li>
             <li><a href="#about">About Me</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">My Projects</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#work">My Work</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
 
@@ -52,8 +52,8 @@
 
         <li><a href="#top" onclick="closeMenu()">Home</a></li>
         <li><a href="#about" onclick="closeMenu()">About Me</a></li>
-        <li><a href="#skills" onclick="closeMenu()">Skills</a></li>
-        <li><a href="#projects" onclick="closeMenu()">My Projects</a></li>
+        <li><a href="#services" onclick="closeMenu()">Services</a></li>
+        <li><a href="#work" onclick="closeMenu()">My Work</a></li>
         <li><a href="#contact" onclick="closeMenu()">Contact Me</a></li>
     </ul>
       
@@ -144,7 +144,7 @@
         <h2 class="text-center text-5xl">My Services</h2>
         <p class="text-center max-w-2xl mx-auto mt-5 mb-12">I am a front-end web developer from Bangladesh with 6 month experience in multiple courses learn to  like a Programmimg Hero.</p>
 
-        <div class="grid grid-cols-4 gap-6 my-10">
+        <div class="grid grid-cols-auto gap-6 my-10">
              <div class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-[#fcf4ff] hover: -translate-y-1 duration-500">
                 <img src="./images/web-icon.png" alt="" class="w-10">
                 <h3 class="text-lg my-4 teaxt-gray-700">Web Design</h3>
@@ -173,12 +173,12 @@
 
     </div>
 <!----- My Work ----->
-<div id="services" class="w-full px-[12%] py-10 scroll-mt-20">
+<div id="work" class="w-full px-[12%] py-10 scroll-mt-20">
     <h4 class="text-center mb-2 text-lg">My portfolio</h4>
     <h2 class="text-center text-5xl">My Latest Work</h2>
     <p class="text-center max-w-2xl mx-auto mt-5 mb-12">Welcome to my web development portfolio! Explore a collection of projects showcasing my expertise in front-end development.</p>
 
-    <div class="grid grid-cols-4 my-10 gap-5">
+    <div class="grid grid-cols-auto my-10 gap-5">
         <div class="aspect-square bg-[url('./images/work-1.png')] bg-no-repeat bg-cover bg-center rounded-lg relative cursor-pointer group">
 
             <div class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
@@ -268,7 +268,7 @@
     <p class="text-center max-w-2xl mx-auto mt-5 mb-12">I'd love to hear from you! If you have any questions, comments or feedback, please use the form below.</p>
 
     <form action="" class="max-w-2xl mx-auto">
-        <div class="grid grid-cols-2 gap-6 mt-10 mb-8">
+        <div class="grid grid-cols-auto gap-6 mt-10 mb-8">
             <input type="text" placeholder="Enter Your Name" class="flex-1 p-3 outline-none border-[0.5px] border-gray-400 rounded-md bg-white">
 
             <input type="email" placeholder="Enter Your Email" class="flex-1 p-3 outline-none border-[0.5px] border-gray-400 rounded-md bg-white">
@@ -278,6 +278,26 @@
             <img src="./images/right-arrow-white.png" alt="" class="w-4">
         </button>
     </form>
+    </div>
+
+    <!----Footer---->
+
+    <div class="mt-20">
+       <div class="text-center">
+        <img src="./images/logo_dark1.png" alt="" class="w-56 mx-auto mb-2">
+        <div class="w-max flex items-center gap-2 mx-auto">
+            <img src="./images/mail_icon.png" alt class="w-6">
+            provasadia2000@gmail.com
+        </div>
+       </div>
+       <div class="text-center sm:flex items-center justify-between border-t border-gray-400 mx-[10%] mt-12 py-6">
+        <p>© 2024 Sadia Siddika. All rights reserved.</p>
+        <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
+            <li><a href="https://github.com/sadiaprova12">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/sadiaprova14/">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/coderprova__/profilecard/?igsh=MTc2cXdhNWNseHh3dg==">Instagram</a></li>
+        </ul>
+       </div>
     </div>
 
     <script src="./script.js"></script>
