added navbar style

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="flex-1">
                 <p class="mb-10 max-w-2xl">I am an experienced Front-End Web Developer with over a decade of professional expertise in the field. Throughout my career, I have had the privilege of collaborating with prestigious organizations, contributing to their success and growth.</p>
 
-                <ul class="grid grid-cols-1 sm:grid-cols-3 gap-6 max-w-2xl">
+                <ul class="grid grid-cols-1 sm:grid-cols-auto gap-6 max-w-2xl">
                     <li class="border-[0.5px] border-gray-400 rounded-xl p-6 cursor-pointer hover:bg-[#fcf4ff] hover:-translate-y-1 duration-500 hover:shadow-[4px_4px_0_#000]">
                         <img src="./images/code-icon.png" alt="" class="w-7 mt-3">
                         <h3 class="my-4 font-semibold text-gray-700">Language</h3>
