added practice file

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <li><a href="#top" onclick="closeMenu()">Home</a></li>
         <li><a href="#about" onclick="closeMenu()">About Me</a></li>
         <li><a href="#services" onclick="closeMenu()">Services</a></li>
-        <li><a href="components/certificate.html" onclick="closeMenu()">Certificates</a></li>
+        <li><a href="components/practice.html" onclick="closeMenu()">Certificates</a></li>
         <li><a href="#work" onclick="closeMenu()">My Work</a></li>
         <li><a href="#contact" onclick="closeMenu()">Contact Me</a></li>
     </ul>
