added certificate link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#top">Home</a></li>
             <li><a href="#about">About Me</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="components/certificate.html">Certificates</a></li>
+            <li><a href="components/practice.html">Certificates</a></li>
             <li><a href="#work">My Work</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
