--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         <p class="max-w-2xl mx-auto font-Ovo">I am a front-end web developer from Bangladesh with 6 month experience in multiple courses learn to  like a Programmimg Hero.</p>
 
         <div class="flex flex-col sm:flex-row items-center gap-4 mt-4">
-            <a href="#contact" class="px-10 py-3 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2 dark:border-transparent font-Ovo">Contact Me <img src="/images/right-arrow-white.png" alt="" class="w-4"></a>
+            <a href="#contact" class="px-10 py-3 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2 dark:border-transparent font-Ovo">Contact Me <img src="./images/right-arrow-white.png" alt="" class="w-4"></a>
 
-            <a href="./images/sadia_siddika_prova_resume.pdf" download class="px-10 py-3 border rounded-full border-gray-500 flex items-center gap-2 bg-white dark:text-black font-Ovo">My Resume <img src="/images/download-icon.png" alt="" class="w-4"></a>
+            <a href="./images/sadia_siddika_prova_resume.pdf" download class="px-10 py-3 border rounded-full border-gray-500 flex items-center gap-2 bg-white dark:text-black font-Ovo">My Resume <img src="./images/download-icon.png" alt="" class="w-4"></a>
         </div>
     </div>
 
